--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -6,36 +6,9 @@ html,
 body {
   height: 100%;
   margin: 0;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f5f6f6+0,dbdce2+21,b8bac6+49,dddfe3+80,f5f6f6+100;Grey+Pipe */
-  background: #f5f6f6; /* Old browsers */
-  background: -moz-linear-gradient(
-    top,
-    #f5f6f6 0%,
-    #dbdce2 21%,
-    #b8bac6 49%,
-    #dddfe3 80%,
-    #f5f6f6 100%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    #f5f6f6 0%,
-    #dbdce2 21%,
-    #b8bac6 49%,
-    #dddfe3 80%,
-    #f5f6f6 100%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #f5f6f6 0%,
-    #dbdce2 21%,
-    #b8bac6 49%,
-    #dddfe3 80%,
-    #f5f6f6 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6',GradientType=0 ); /* IE6-9 */
+  background: #1b1b1b;
 }
 
 #root {
   height: 100%;
-  background: #88a7cc;
 }
